dodalem proste, konsolowe UI

--- a/Kompresja Deflate/Kompresja Deflate.vcxproj
+++ b/Kompresja Deflate/Kompresja Deflate.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="kompresja.cpp" />
     <ClCompile Include="Tabele_RFC_1951.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
