--- a/Kompresja Deflate/Kompresja Deflate.vcxproj.filters
+++ b/Kompresja Deflate/Kompresja Deflate.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="funkcje_pomocnicze_DK.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="UI.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
